# pdm-build-locked

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.rst  pylock.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  docsbuild.yml  lint.yml  pythonpublish.yml
doc/src/: conf.py  index.rst  requirements.txt  usage.rst
doc/src/about/: what.rst  when.rst
doc/src/plugins/: backend.rst  choice.rst  cli.rst
src/pdm_build_locked/: __init__.py  _utils.py  backend.py  command.py  hatchling.py  plugin.py
tests/: conftest.py  utils.py
tests/data/empty/: pyproject.toml
tests/data/invalid/: pyproject.toml
tests/data/large/: pyproject.toml
tests/data/large-selected/: pyproject.toml
tests/data/lock/: pyproject.toml
tests/data/lock-disabled/: pyproject.toml
tests/data/lock-hatchling/: pyproject.toml
tests/data/simple/: pyproject.toml
tests/data/simple-hatchling/: pyproject.toml
tests/data/simple-optional/: pyproject.toml
tests/unit/: test_backend.py  test_build_command.py  test_build_locked.py  test_utils.py
