[project]
name = "pdm-build-locked"
dynamic = ["version"]
description = '''\
        pdm-build-locked is a pdm plugin to add locked packages as additional optional dependency groups
        to the distribution metadata
    '''
readme = "README.rst"
keywords = [
    "pdm",
    "plugin"
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
authors = [
    {name = "sigma67", email = "sigma67.github@gmail.com"},
    {name = "Frost Ming", email = "me@frostming.com"},
]
dependencies = []
requires-python = ">=3.8"

[project.entry-points.pdm]
pdm-build-locked = "pdm_build_locked:plugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

#########
# TOOLS #
#########

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.dev-dependencies]
dev = [
    "pdm>=2.8.0",
    "pytest>=7.4.0",
    "pkginfo>=1.9.6",
    "pytest-cov>=4.1.0",
    "click>=8.1.6",
    "pre-commit>=3.5.0",
]

[tool.ruff]
line-length = 120
extend-select = [
  "I",    # isort
  "B",    # flake8-bugbear
  "C4",   # flake8-comprehensions
  "PGH",  # pygrep-hooks
  "RUF",  # ruff
  "W",    # pycodestyle
  "YTT",  # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
## mypy static typechecker settings
## see https://mypy.readthedocs.io/en/stable/config_file.html
## justify single line via:
##     # type: ignore[<error-code>]
##     # type: ignore
files = [
    "src/",
    "tests/"  # enable/disable linting within tests directory
]
mypy_path = "src"
show_error_codes = true
strict = true  # https://mypy.readthedocs.io/en/stable/config_file.html#confval-strict

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--verbose --cov --cov-report=term --cov-report=html --cov-report=xml --cov-config=pyproject.toml"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
