[project]
name = "test-pdm"
version = "0.1.0"
dependencies = ["requests"]
requires-python = ">=3.9"
dynamic = ["optional-dependencies"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["foo.py"]

[tool.hatch.metadata.hooks.build-locked]
