[project]
name = "test-pdm"
version = "0.1.0"
dependencies = ["requests==2.31.0"]
requires-python = ">=3.8"
dynamic = ["optional-dependencies"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["foo.py"]

[tool.hatch.metadata.hooks.build-locked]
